force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Function__c/Plant_Function__c.object-meta.xml
<CustomObject>
    <label>Plant Function</label>
    <nameField>
        <displayFormat>PF-{000000}</displayFormat>
        <label>Plant Functions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plant Functions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>