force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Function__c/fields/Auth_Plant_Name__c.field-meta.xml
<CustomField>
    <fullName>Auth_Plant_Name__c</fullName>
    <formula>Plant_Program__r.Plant_Shop__r.Auth_Plant_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auth Plant Name</label>
    <type>Text</type>
</CustomField>