force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Function__c/fields/Auth_Sector__c.field-meta.xml
<CustomField>
    <fullName>Auth_Sector__c</fullName>
    <formula>Plant_Program__r.Auth_Sector1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auth Sector</label>
    <type>Text</type>
</CustomField>