force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Function__c/fields/Base_SUPP__c.field-meta.xml
<CustomField>
    <fullName>Base_SUPP__c</fullName>
    <formula>TEXT(Function__r.Base_Supp__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base/SUPP</label>
    <type>Text</type>
</CustomField>