force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Function__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <formula>TEXT(Function__r.Classification__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification</label>
    <type>Text</type>
</CustomField>