force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Function__c/fields/Core_Area_Harbour_view__c.field-meta.xml
<CustomField>
    <fullName>Core_Area_Harbour_view__c</fullName>
    <formula>TEXT(Function__r.Core_Area_Harbour_view__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core Area (Harbour view)</label>
    <type>Text</type>
</CustomField>