force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Function__c/fields/Crews_Numeric__c.field-meta.xml
<CustomField>
    <fullName>Crews_Numeric__c</fullName>
    <description>Resolved crew count for Initiative entry. Uses the plant function shift override first, then falls back to the plant program shift definition.</description>
    <formula>BLANKVALUE(Shift_OR__r.Crews_Numeric__c, Plant_Program__r.Shifts_Def__r.Crews_Numeric__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crews Numeric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>