force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Function__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Combination of Plant Program and Function Id</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>