force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Function__c/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Function Master</label>
    <referenceTo>Function__c</referenceTo>
    <relationshipLabel>Plant Functions</relationshipLabel>
    <relationshipName>Plant_Functions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>