force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Function__c/fields/Function_Level__c.field-meta.xml
<CustomField>
    <fullName>Function_Level__c</fullName>
    <formula>TEXT( Function__r.Function_Level__c )</formula>
    <label>Function Level</label>
    <type>Text</type>
</CustomField>