force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Function__c/fields/Function_Name__c.field-meta.xml
<CustomField>
    <fullName>Function_Name__c</fullName>
    <label>Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>