force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Function__c/fields/Functions__c.field-meta.xml
<CustomField>
    <fullName>Functions__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;  Function__c  ,Function__r.Name,&quot;_self&quot;)</formula>
    <label>Function Master</label>
    <type>Text</type>
</CustomField>