force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Function__c/fields/GMSA_Shop_SD_view__c.field-meta.xml
<CustomField>
    <fullName>GMSA_Shop_SD_view__c</fullName>
    <formula>TEXT(Function__r.GMSA_Shop_SD_view__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GMSA Shop (SD view)</label>
    <type>Text</type>
</CustomField>