force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Function__c/fields/Hover_Over__c.field-meta.xml
<CustomField>
    <fullName>Hover_Over__c</fullName>
    <formula>Function__r.Hover_Over__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hover Over</label>
    <type>Text</type>
</CustomField>