force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Function__c/fields/MFG_Sub_Function__c.field-meta.xml
<CustomField>
    <fullName>MFG_Sub_Function__c</fullName>
    <formula>Function__r.MFG_Sub_Function__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MFG Sub-Function</label>
    <type>Text</type>
</CustomField>