force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Function__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <length>200</length>
    <type>Text</type>
</CustomField>