force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Function__c/fields/Plant_Line__c.field-meta.xml
<CustomField>
    <fullName>Plant_Line__c</fullName>
    <formula>Plant_Program__r.Plant_Line__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plant Line</label>
    <type>Text</type>
</CustomField>