force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Function__c/fields/Plant_Program__c.field-meta.xml
<CustomField>
    <fullName>Plant_Program__c</fullName>
    <label>Plant Program</label>
    <referenceTo>Plant_Program__c</referenceTo>
    <relationshipLabel>Plant Functions</relationshipLabel>
    <relationshipName>Plant_Program</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>