force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Function__c/fields/Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Code__c</fullName>
    <formula>TEXT(Plant_Program__r.Program_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Code</label>
    <type>Text</type>
</CustomField>