force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Function__c/fields/Program_Product_Index__c.field-meta.xml
<CustomField>
    <fullName>Program_Product_Index__c</fullName>
    <formula>TEXT(Plant_Program__r.Program_Product_Index__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program/Product Index</label>
    <type>Text</type>
</CustomField>