force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Function__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <formula>TEXT(Function__r.Auth_Sector__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sector</label>
    <type>Text</type>
</CustomField>