force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Function__c/fields/Shift__c.field-meta.xml
<CustomField>
    <fullName>Shift__c</fullName>
    <formula>Plant_Program__r.Shifts_Def__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shift</label>
    <type>Text</type>
</CustomField>