force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Function__c/fields/Shift_OR__c.field-meta.xml
<CustomField>
    <fullName>Shift_OR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shift OR</label>
    <referenceTo>Operation_Plan__c</referenceTo>
    <relationshipLabel>Plant Functions</relationshipLabel>
    <relationshipName>ShiftOverride</relationshipName>
    <type>Lookup</type>
</CustomField>