force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Function__c/fields/Shop_Master_view__c.field-meta.xml
<CustomField>
    <fullName>Shop_Master_view__c</fullName>
    <formula>TEXT(Function__r.Shop_Master_View__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shop (Master view)</label>
    <type>Text</type>
</CustomField>