force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Function__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Plant__c</columns>
    <columns>Auth_Sector__c</columns>
    <columns>Shop_Master_view__c</columns>
    <columns>Program_Product_Index__c</columns>
    <columns>Plant_Program_Name__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Program_Code__c</columns>
    <columns>Functional_Area__c</columns>
    <columns>Classification__c</columns>
    <columns>Function__c</columns>
    <columns>Functions__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>